package seedu.inventorybro;

import java.util.ArrayList;

/**
 * Represents the list of active categories available in the application.
 */
public class CategoryList {
    private final ArrayList<Category> categories;

    public CategoryList() {
        this.categories = new ArrayList<>();
        // The default fallback category is always instantiated first
        this.categories.add(new Category("Others"));
    }

    public void addCategory(Category category) {
        assert category != null : "Cannot add a null category";
        categories.add(category);
    }

    /**
     * Checks if a category already exists (case-insensitive).
     */
    public boolean containsCategory(String categoryName) {
        for (Category c : categories) {
            if (c.getName().equalsIgnoreCase(categoryName)) {
                return true;
            }
        }
        return false;
    }

    /**
     * Retrieves the Category object by name.
     * Returns the default "Others" category if the name is not found.
     */
    public Category getCategory(String categoryName) {
        for (Category c : categories) {
            if (c.getName().equalsIgnoreCase(categoryName)) {
                return c;
            }
        }
        return categories.get(0); // Safely falls back to "Others"
    }

    /**
     * Removes a category from the list by its name.
     *
     * @param categoryName The name of the category to remove.
     */
    public void removeCategory(String categoryName) {
        categories.removeIf(category -> category.getName().equalsIgnoreCase(categoryName.trim()));
    }

    /**
     * Returns the underlying list of all categories.
     *
     * @return The ArrayList of categories.
     */
    public ArrayList<Category> getCategories() {
        return categories;
    }
}
