@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(items: ItemList, categories: CategoryList, ui: Ui): void
}

class FilterCommand {
    - input: String
    + FilterCommand(input: String)
    + execute(items: ItemList, categories: CategoryList, ui: Ui): void
    - buildAndGroups(predicates: List, operators: List): List
    - collectMatchingItems(items: ItemList, andGroups: List): List
    - passesFilter(item: Item, andGroups: List): boolean
    - andGroupPasses(item: Item, group: List): boolean
    - evaluatePredicate(item: Item, field: String, operator: String, rawValue: String): boolean
    - satisfiesOperator(cmp: int, operator: String): boolean
}

interface Validator <<interface>> {
    + validate(items: ItemList, categories: CategoryList): void
}

class FilterCommandValidator {
    - PREDICATE_PATTERN: Pattern
    - STRING_VALUE_PATTERN: Pattern
    - NONNEG_INT_PATTERN: Pattern
    - NONNEG_PRICE_PATTERN: Pattern
    - input: String
    + FilterCommandValidator(input: String)
    + validate(items: ItemList, categories: CategoryList): void
    - validateGaps(logic: String, matchRanges: List): void
    - validatePredicates(predicates: List): void
    - validateSinglePredicate(pred: String[]): void
}

class Item {
    - description: String
    - quantity: int
    - price: double
    + getDescription(): String
    + getQuantity(): int
    + getPrice(): double
}

class CategoryList {
}

class ItemList {
    + getItem(index: int): Item
    + size(): int
}

class Ui {
    + showMessage(message: String): void
}

Command <|.. FilterCommand
Validator <|.. FilterCommandValidator

FilterCommand ..> FilterCommandValidator : <<creates>>
FilterCommand ..> ItemList : reads >
FilterCommand ..> Item : evaluates >
FilterCommand ..> Ui : <<uses>>
FilterCommandValidator ..> ItemList : reads >

@enduml
